Add gflops column

--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@ td, th {
     <tr>
       <th>name</th>
       <th>mean (ms)</th>
+      <th>GFLOPS</th>
       <th>repeat</th>
     </tr>
   </table>
